1. 使用代码沙箱内容更新